syntax = "proto3";
package person;
option go_package = "ms.api/protos/pb/personService";

// Import types
import "types.proto";

// Request type for person by ID
message PersonRequest {
  string id = 1;
}

message PeopleRequest {
  int64 first = 1;
  int64 last = 2;
  string after = 3;
  string before = 4;
  string keywords = 5;
  string onboarded = 6;
}

// Request type for staff by ID
message StaffRequest {
  string id = 1;
}

service PersonService{
  // Q U E R I E S
  rpc Person(PersonRequest) returns (types.Person) {}
  rpc People(PeopleRequest) returns (types.Persons) {}
  rpc GetStaffById(StaffRequest) returns (types.Staff) {}
}
